--- a/profapp/templates/company/company_profile.html
+++ b/profapp/templates/company/company_profile.html
@@ -19,7 +19,7 @@
             $scope.$$translate = {{translates('CompanyProfile') | safe}};
             $scope.cropper_for_copmany = true;
             $scope.user_have_company = true;
-            $scope.company = {{company.get_client_side_dict() | tojson | safe}};
+{#            $scope.company = {{company.get_client_side_dict() | tojson | safe}};#}
 
             $scope.url_back = {{raw_url_for('company.show') | safe}};
             $scope.url_portal_profile = {{raw_url_for('portal.profile') | safe}};
@@ -57,7 +57,7 @@
                 }
                 $scope.editing = false;
                 deff(resp);
-                $scope.company = resp
+                $scope.data = resp
             };
 
             $scope.afterLoad = function (resp, deff) {
@@ -67,16 +67,16 @@
 //                $scope.logo_file_url = fileUrl(resp['logo_file_id']);
             };
             //company value
-            $scope.company_name = {{company.get_client_side_dict().name | tojson | safe}};
-            $scope.company_country = {{company.get_client_side_dict().country | tojson | safe}};
-            $scope.company_city = {{company.get_client_side_dict().city | tojson | safe}};
-            $scope.company_postcode = {{ company.get_client_side_dict().postcode | tojson | safe }};
-            $scope.company_address = {{ company.get_client_side_dict().address | tojson | safe }};
-            $scope.company_phone = {{ company.get_client_side_dict().phone | tojson | safe  }};
-            $scope.company_phone2 = {{ company.get_client_side_dict().phone2 | tojson | safe  }};
-            $scope.company_email = {{ company.get_client_side_dict().email | tojson | safe  }};
-            $scope.company_lat = {{ company.get_client_side_dict().lat | tojson | safe }};
-            $scope.company_lon = {{ company.get_client_side_dict().lon | tojson | safe }};
+{#            $scope.company_name = {{data.get_client_side_dict().name | tojson | safe}};#}
+{#            $scope.company_country = {{data.get_client_side_dict().country | tojson | safe}};#}
+{#            $scope.company_city = {{data.get_client_side_dict().city | tojson | safe}};#}
+{#            $scope.company_postcode = {{ data.get_client_side_dict().postcode | tojson | safe }};#}
+{#            $scope.company_address = {{ data.get_client_side_dict().address | tojson | safe }};#}
+{#            $scope.company_phone = {{ data.get_client_side_dict().phone | tojson | safe  }};#}
+{#            $scope.company_phone2 = {{ data.get_client_side_dict().phone2 | tojson | safe  }};#}
+{#            $scope.company_email = {{ data.get_client_side_dict().email | tojson | safe  }};#}
+{#            $scope.company_lat = {{ data.get_client_side_dict().lat | tojson | safe }};#}
+{#            $scope.company_lon = {{ data.get_client_side_dict().lon | tojson | safe }};#}
         });
     </script>
     {% raw %}
@@ -86,27 +86,27 @@
              af-after-load="afterLoad"
              ng-model="data">
             <div class="row company">
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 image-company-profile">
+                <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 image-company-profile">
 
                     <!-- TODO: MY by OZ: 400x300 -> some class -->
-                    <img ng-show="!editing" style="width: 360px; height: 270px; position: relative"
-                         pr-image="company.logo_file_id" alt="image">
+                    <img ng-show="!editing" style="width: 400px; height: 300px; position: relative"
+                         pr-image="data.logo_file_id" alt="image">
 
                     <div ng-if="editing">
-                        <div style="width: 360px; height: 270px; position: relative" pr-crop="data.logo"></div>
+                        <div style="width: 400px; height: 300px; position: relative" pr-crop="data.logo"></div>
                     </div>
                 </div>
 
-                <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 edit-company">
+                <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 edit-company">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                        <div ng-if="company.id">
+                        <div ng-if="data.id">
                             <button class="btn btn-default go-portal pull-right border-radius" type="button"
-                                    ng-if="company.own_portal" disabled ng-click="portal_update(company.id,
-                                    company.own_portal.id)
+                                    ng-if="data.own_portal" disabled ng-click="portal_update(data.id,
+                                    data.own_portal.id)
                                     ">{{_('Portal profile') }}
                             </button>
                             <button class="btn btn-default go-portal pull-right border-radius" type="button"
-                                    ng-if="!company.own_portal" ng-click="portal_create(company.id)">{{
+                                    ng-if="!data.own_portal" ng-click="portal_create(data.id)">{{
                                 _('Launch portal') }}
                             </button>
                             <button ng-if="editing" class="btn btn-default save-profile pull-right border-radius"
@@ -117,7 +117,7 @@
                                     ng-click="edit()" ng-if="can_edit && !editing">{{ _('Edit profile') }}
                             </button>
                         </div>
-                        <div ng-if="!company.id">
+                        <div ng-if="!data.id">
                             <button class="btn btn-default save-profile pull-right border-radius"
                                     type="button" ng-click="$af.save(data)"
                                     ng-disabled="!$af.isActionAllowed(data, 'save') ">{{ _('Create company') }}
@@ -128,17 +128,17 @@
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <ul class="edit-block" ng-if="!editing">
-                            <li ng-show="company.name"><h3>{{ company.name }}</h3></li>
-                            <li ng-show="company.country">{{ _('Country:') }} {{ company.country }}</li>
-                            <li ng-show="company.region">{{ _('Region:') }} {{ company.region }}</li>
-                            <li ng-show="company.city">{{ _('City:') }} {{ company.city }}</li>
-                            <li ng-show="company.postcode">{{ _('Postcode:') }} {{ company.postcode }}</li>
-                            <li ng-show="company.address">{{ _('Address:') }} {{ company.address }}</li>
-                            <li ng-show="company.phone">{{ _('Phone:') }} {{ company.phone }}</li>
-                            <li ng-show="company.phone2">{{ _('Fax:') }} {{ company.phone2 }}</li>
-                            <li ng-show="company.email">{{ _('Email:') }} {{ company.email }}</li>
+                            <li ng-show="data.name"><h3>{{ data.name }}</h3></li>
+                            <li ng-show="data.country">{{ _('Country:') }} {{ data.country }}</li>
+                            <li ng-show="data.region">{{ _('Region:') }} {{ data.region }}</li>
+                            <li ng-show="data.city">{{ _('City:') }} {{ data.city }}</li>
+                            <li ng-show="data.postcode">{{ _('Postcode:') }} {{ data.postcode }}</li>
+                            <li ng-show="data.address">{{ _('Address:') }} {{ data.address }}</li>
+                            <li ng-show="data.phone">{{ _('Phone:') }} {{ data.phone }}</li>
+                            <li ng-show="data.phone2">{{ _('Fax:') }} {{ data.phone2 }}</li>
+                            <li ng-show="data.email">{{ _('Email:') }} {{ data.email }}</li>
                             <li ng-show="">Long??</li>
-                            <li ng-show="company.own_portal.host">{{ _('Portal:') }} {{ company.own_portal.host }}</li>
+                            <li ng-show="data.own_portal.host">{{ _('Portal:') }} {{ data.own_portal.host }}</li>
                         </ul>
                         <div class="edit-block" ng-if="editing">
 
@@ -148,9 +148,9 @@
                                 <div class="col-lg-10 edit-data">
                                     <input pr-validation-answer="data_validation:name" oles_type="text"
                                            class="form-control border-radius"
-                                           id="basic-url" aria-describedby="basic-addon3" ng-model="company.name"
+                                           id="basic-url" aria-describedby="basic-addon3" ng-model="data.name"
                                            oles_name="company_name" oles_oles_ng-pattern="/[\wа-яёі']{3}/">
-                                    <div ng-show="formCompany.company_name.$error.pattern" class="error-input">The
+                                    <div  ng-if=" 0 && formCompany.company_name.$error.pattern" class="error-input">The
                                         company name should be longer!</div>
                                 </div>
 
@@ -160,7 +160,7 @@
                                            class="form-control border-radius"
                                            id="basic-url" aria-describedby="basic-addon3" ng-model="data.country"
                                            oles_name="company_country" oles_ng-pattern="/[\wа-яёі]{2}/">
-                                    <div ng-show="formCompany.company_country.$error.pattern" class="error-input">The
+                                    <div  ng-if=" 0 && formCompany.company_country.$error.pattern" class="error-input">The
                                         country name should be longer!</div>
                                 </div>
                                 <div class="col-lg-2">{{ _('Region:') }}</div>
@@ -175,7 +175,7 @@
                                            class="form-control border-radius" oles_name="company_city"
                                            oles_ng-pattern="/[\wа-яёі]{2}/"
                                            id="basic-url" aria-describedby="basic-addon3" ng-model="data.city">
-                                    <div ng-show="formCompany.company_city.$error.pattern" class="error-input">The city
+                                    <div  ng-if=" 0 && formCompany.company_city.$error.pattern" class="error-input">The city
                                         name should be longer!
                                     </div>
 
@@ -186,7 +186,7 @@
                                            class="form-control border-radius" oles_ng-pattern="/[0-9]{3}/"
                                            id="basic-url" aria-describedby="basic-addon3" ng-model="data.postcode"
                                            oles_name="company_postcode">
-                                    <div ng-show="formCompany.company_postcode.$error.pattern" class="error-input">The
+                                    <div  ng-if=" 0 && formCompany.company_postcode.$error.pattern" class="error-input">The
                                         postcode should be longer!
                                     </div>
 
@@ -197,7 +197,7 @@
                                            class="form-control border-radius" oles_ng-pattern="/[\wа-яёі\0-9]{4}/"
                                            id="basic-url" aria-describedby="basic-addon3" ng-model="data.address"
                                            oles_name="company_address">
-                                    <div ng-show="formCompany.company_address.$error.pattern" class="error-input">The
+                                    <div  ng-if=" 0 && formCompany.company_address.$error.pattern" class="error-input">The
                                         address should be longer!
                                     </div>
 
@@ -208,7 +208,7 @@
                                            class="form-control border-radius" oles_ng-pattern="/[0-9]{6}/"
                                            id="basic-url" aria-describedby="basic-addon3" ng-model="data.phone"
                                            oles_name="company_phone">
-                                    <div ng-show="formCompany.company_phone.$error.pattern" class="error-input">The
+                                    <div  ng-if=" 0 && formCompany.company_phone.$error.pattern" class="error-input">The
                                         phone should be longer!
                                     </div>
 
@@ -226,7 +226,7 @@
                                            oles_ng-pattern="/[0-9a-z_]+@[0-9a-z_]+\.[a-z]{2,5}/"
                                            id="basic-url" aria-describedby="basic-addon3" ng-model="data.email"
                                            oles_name="company_email">
-                                    <div ng-show="formCompany.company_email.$error.pattern" class="error-input">The
+                                    <div  ng-if=" 0 && formCompany.company_email.$error.pattern" class="error-input">The
                                         email not validate!
                                     </div>
 
@@ -257,19 +257,19 @@
                 <textarea ng-if="editing" ui-tinymce="tinymceImageOptions" ng-model="data.about"></textarea>
             </div>
             </form>
-            <div class="row" ng-if="!editing && company.short_description">
+            <div class="row" ng-if="!editing && data.short_description">
                 <div class="col-lg-12 about-company-text">
                     <h3>{{ _('Short description:') }}</h3>
-                    <p ng-bind-html="company.short_description"></p>
+                    <p ng-bind-html="data.short_description"></p>
                 </div>
 
             </div>
 
-            <div class="row" ng-if="!editing && company.about">
+            <div class="row" ng-if="!editing && data.about">
                 <div class="col-lg-12">
                     <h3>{{ _('About company:') }}</h3>
 
-                    <p ng-bind-html="company.about"></p>
+                    <p ng-bind-html="data.about"></p>
                 </div>
             </div>
         </div>
