--- a/profapp/templates/general/user_edit_profile.html
+++ b/profapp/templates/general/user_edit_profile.html
@@ -52,16 +52,10 @@
                         class="fa fa-cog fa-2x"></i></a>
             </div>
 
-
             <div class="row">
-                <!-- <img class="img-rounded profile-thumbnail" src="{{ user.gravatar(size=256) }}"><br> -->
-
-
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 profile-thumbnail">
-                    <div style="width: 100%; height: 300px; position: relative" pr-crop="data.user
-                    .avatar"></div>
+                    <div style="width: 100%; height: 300px; position: relative" pr-crop="data.user.avatar"></div>
                 </div>
-
 
                 <form name="formUser" class="col-lg-8 col-md-8 col-sm-8 col-xs-8 edit-grup">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
@@ -85,11 +79,6 @@
                                aria-describedby="sizing-addon1" type="text"
                                placeholder="first name" ng-model="data.user.profireader_first_name"
                                name="profireader_first_name" ng-pattern="/[\wа-яёі']{4}/">
-                        <div ng-show="formUser.profireader_first_name.$error.pattern" class="error-input">The
-                            user name should be longer!
-                        </div>
-                        <input pr-test="FirstNameEdit" pr-validation-answer="data_validation:profireader_first_name" class="form-control" aria-describedby="sizing-addon1" type="text"
-                               placeholder="first name" ng-model="data.user.profireader_first_name">
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                         <span class="input-group-addon" id="sizing-addon1">{{ _('Your last name') }}</span>
@@ -97,12 +86,6 @@
                                aria-describedby="sizing-addon1" type="text"
                                placeholder="last name" ng-model="data.user.profireader_last_name"
                                name="profireader_last_name" ng-pattern="/[\wа-яёі']{4}/">
-                        <div ng-show="formUser.profireader_last_name.$error.pattern" class="error-input">The
-                            user name should be longer!
-                        </div>
-                        <input pr-test="LastNameEdit" pr-validation-answer="data_validation:profireader_last_name" class="form-control" aria-describedby="sizing-addon1" type="text"
-                               placeholder="last name"
-                               ng-model="data.user.profireader_last_name">
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm">
                         <span class="input-group-addon" id="sizing-addon1">{{ _('Birthday') }}</span>
@@ -156,11 +139,7 @@
                                   cols="40" ng-model="data.user.about_me"></textarea>
                 </div>
                 <div class="item">
-                    <button class="btn btn-default save-profile pull-right
-                    </div>
-                    <div class="item">
-                        <button pr-test="SaveProfileButton" class="btn btn-default save-profile pull-right
-                        border-radius"
+                    <button pr-test="SaveProfileButton" class="btn btn-default save-profile pull-right border-radius"
                             type="button" ng-click="$af.save(data)"
                             ng-disabled="!$af.isActionAllowed(data, 'save') ">{{ _('Save profile') }}
                     </button>
