--- a/profapp/templates/portal/portal_create.html
+++ b/profapp/templates/portal/portal_create.html
@@ -59,8 +59,8 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 image-company-profile create-img">
-                    <div style="width: 400px;">
-                        <div ng-model="data.image" pr-crop></div>
+                    <div >
+                        <div style="width: 400px; height: 300px; position: relative;padding-bottom: 50px" pr-crop="data.logo"></div>
                     </div>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 edit-company">
