--- a/profapp/templates/front/clover/article_long.html
+++ b/profapp/templates/front/clover/article_long.html
@@ -1,18 +1,17 @@
 {# опис статті + теги #}
+{% import '_common/macros.html' as frontmacros %}
 <div class="block-item full-block-info" style="height: auto;">
 
     <div class="item-additional-info">
         <a href="{{ url_for('front.company_page', member_company_id = article['company']['id'], member_company_name = article['company']['name']) }}"
            class="item-company">{{ article['company']['name']|safe }}</a>
         <div class="item-publication-date">{{ article['publishing_tm']|safe }}</div>
-        <div><br>
-            <script type="text/javascript">getSearchBlock({{ article|tojson }})</script>
-        </div>
     </div>
 
     {% if article['tags'] %}
+
         <div style="text-align: right">{% for tag in article.tags %}
-            {{ frontmacros.tag(tag, url_toggle_tag, selected_tag_names = [], toogle_tag = True) }} {% endfor %}</div>
+            {{ frontmacros.tag(tag, tags.url_construct_toggle, selected_tag_names = [], toogle_tag = True) }} {% endfor %}</div>
     {% endif %}
 
     <h2 class="item-title">{{ article['title']|safe }}</h2>
