--- a/profapp/templates/front/clover/article_long.html
+++ b/profapp/templates/front/clover/article_long.html
@@ -5,7 +5,13 @@
     <div class="item-additional-info">
         <a href="{{ url_for('front.company_page', member_company_id = article['company']['id'], member_company_name = article['company']['name']) }}"
            class="item-company">{{ article['company']['name']|safe }}</a>
-        <div class="item-publication-date">{{ article['publishing_tm']|safe }}</div>
+        <div class="item-publication-date">
+            {% if article.division.portal_division_type_id == 'events' %}
+                {{ moment(article.event_begin_tm, 'dd, LL') }}-{{ moment(article.event_end_tm, 'dd, LL') }}
+            {% else %}
+                {{ moment(article.publishing_tm) }}
+            {% endif %}
+        </div>
     </div>
 
     {% if article['tags'] %}
