--- a/profapp/templates/front/clover/article_short.html
+++ b/profapp/templates/front/clover/article_short.html
@@ -15,7 +15,13 @@
     <div class="item-additional-info">
         <a href="{{ url_for('front.company_page', member_company_name = article['company']['name'], member_company_id = article['company']['id']) }}"
            class="item-company">{{ article['company']['name']|safe }}</a>
-        <div class="item-publication-date">{{ article['publishing_tm']|safe }}</div>
+        <div class="item-publication-date">
+            {% if article.division.portal_division_type_id == 'events' %}
+                {{ moment(article.event_begin_tm, 'dd, LL') }}-{{ moment(article.event_end_tm, 'dd, LL') }}
+            {% else %}
+                {{ moment(article.publishing_tm) }}
+            {% endif %}
+        </div>
     </div>
     <div class="bottom-hide"></div>
     <img {{ prImageUrl(article['illustration']['url']) }} class="block-item-img bg-contain"/>
