--- a/profapp/static/front/clover/css/style.css
+++ b/profapp/static/front/clover/css/style.css
@@ -1,11 +1,11 @@
 body {
     padding-top: 75px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
     font-family: 'Open Sans', sans-serif;
+    background-color: #e1e1e1;
 }
 
 /*body.member-company{*/
 /*padding-top: 169px;*/
-/*}*/
 
 h1, h2, h3, h4, h5, h6 {
     /*font-family: 'Droid Serif', serif!important;*/
@@ -29,6 +29,7 @@ h1, h2, h3, h4, h5, h6 {
         /*position: relative;*/
         padding-top: 60px;
         top: 0px;
+        box-shadow: 0px 4px 2px #b4b4b4;
         /*-webkit-transition: padding .5s ease-in-out, top .5s ease-in-out;*/
         /*-moz-transition: padding .5s ease-in-out, top .5s ease-in-out;*/
         /*transition: padding .5s ease-in-out, top .5s ease-in-out;*/
@@ -120,13 +121,13 @@ h1, h2, h3, h4, h5, h6 {
     /*font-size: 15px;*/
 
 }
-  .border-limiter {
-          border: 0;
-          border-bottom: 6px solid #e1e1e1;
-          margin: auto;
-          width: 989px;
-          padding-left: 1px;
-  }
+  /*.border-limiter {*/
+          /*border: 0;*/
+          /*border-bottom: 6px solid #e1e1e1;*/
+          /*margin: auto;*/
+          /*width: 989px;*/
+          /*padding-left: 1px;*/
+  /*}*/
 
 .logo {
     display: block;
@@ -146,7 +147,7 @@ h1, h2, h3, h4, h5, h6 {
     position: relative;
     width: 79px;
     height: 51px;
-    background: url('../img/logo.png') no-repeat;
+    background: url('//static.profireader.com/static/front/img/logo.png') no-repeat;
 }
 
 .search-form {
@@ -237,6 +238,7 @@ footer .btn-social-icon {
     background: #fff;
     margin-bottom: 20px;
     height: 240px;
+    box-shadow: 0px 4px 2px #b4b4b4;
 
 }
 
@@ -270,7 +272,7 @@ footer .btn-social-icon {
     font-size: 20px;
     color: #7d7d7d;
     padding-left: 18px;
-    background: transparent url("../img/article/icons/type.png") no-repeat left center;
+    background: transparent url("//static.profireader.com/static/front/img/article/icons/type.png") no-repeat left center;
 }
 
 .block-item.list-elements h2 {
@@ -294,7 +296,11 @@ footer .btn-social-icon {
 
 .block-item .item-short-content {
     overflow: hidden;
-    height: 125px;
+    max-height: 5.5em;
+    display: block;
+    text-overflow: ellipsis;
+    word-wrap: break-word;
+    line-height: 1.4em;
 }
 
 .block-item {
@@ -347,7 +353,7 @@ footer .btn-social-icon {
     float: left;
     position: relative;
     padding-left: 18px;
-    background: transparent url("../img/article/icons/company.png") no-repeat left center;
+    background: transparent url("//static.profireader.com/static/front/img/article/icons/company.png") no-repeat left center;
 }
 
 a.item-company {
@@ -362,7 +368,7 @@ a.item-company {
 .list-elements.right-sidebar .item-publication-date {
     float: right;
     padding-left: 18px;
-    background: transparent url("../img/article/icons/calendar.png") no-repeat left center;
+    background: transparent url("//static.profireader.com/static/front/img/article/icons/calendar.png") no-repeat left center;
 
 }
 
@@ -418,13 +424,13 @@ a.item-company {
 .pager li.previous {
     left: 20px;
     padding-left: 0px;
-    background: url("../img/prev.png") top left no-repeat;
+    background: url("//static.profireader.com/static/front/img/prev.png") top left no-repeat;
 }
 
 .pager li.next {
     right: 20px;
     padding-right: 0px;
-    background: url("../img/next.png") top right no-repeat;
+    background: url("//static.profireader.com/static/front/img/next.png") top right no-repeat;
 }
 
 footer {
@@ -484,7 +490,7 @@ footer .promo {
     left: 400px;
     width: 210px;
     height: 160px;
-    background: url("../img/polska_pomoc.png") bottom center no-repeat;
+    background: url("//static.profireader.com/static/front/img/polska_pomoc.png") bottom center no-repeat;
     text-align: center;
 
 }
@@ -504,7 +510,6 @@ footer .promo {
     -webkit-border-radius: 0px;
     -moz-border-radius: 0px;
     border-radius: 0px;
-
     box-shadow: none;
 }
 
@@ -535,7 +540,7 @@ footer .promo {
     width: 100%;
     bottom: 31px;
     right: 0;
-    background: transparent url("../img/bottom.png") repeat-x;
+    background: transparent url("//static.profireader.com/static/front/img/bottom.png") repeat-x;
 }
 
 .article-cover {
@@ -575,7 +580,7 @@ footer .promo {
     /*position: absolute;*/
     /*left: 0;*/
     padding-left: 18px;
-    background: transparent url("../img/article/icons/company.png") no-repeat left center;
+    background: transparent url("//static.profireader.com/static/front/img/article/icons/company.png") no-repeat left center;
 }
 
 .block-item .item-additional-info .item-comments,
@@ -588,7 +593,7 @@ footer .promo {
     /*float: right;*/
     padding-left: 18px;
     margin-top: -52px;
-    background: transparent url("../img/article/icons/comment.png") no-repeat left center;
+    background: transparent url("//static.profireader.com/static/front/img/article/icons/comment.png") no-repeat left center;
 }
 
 .block-item .item-additional-info-top .item-favorite {
@@ -610,7 +615,7 @@ footer .promo {
     padding-left: 18px;
     width: auto;
     margin-left: -280px;
-    background: transparent url("../img/article/icons/calendar.png") no-repeat left center;
+    background: transparent url("//static.profireader.com/static/front/img/article/icons/calendar.png") no-repeat left center;
 }
 
 .block-item .item-additional-info-top .item-comments,
@@ -624,7 +629,7 @@ footer .promo {
     width: 100%;
     padding: 7px 7px 7px 18px;
     border-top: 1px #ccc solid;
-    background: transparent url("../img/article/icons/tag.png") no-repeat left center;
+    background: transparent url("//static.profireader.com/static/front/img/article/icons/tag.png") no-repeat left center;
 }
 
 .tag-list a {
