--- a/profapp/templates/pager.html
+++ b/profapp/templates/pager.html
@@ -37,11 +37,11 @@
             <span class="glyphicon glyphicon-upload"></span>
         </label>
 
-        <span ng-repeat="(url_class_name, url) in prCrop['preset_urls']" class="btn btn-primary" type="button"
+        <span ng-repeat="(preset_id, preset_url) in preset_urls" class="btn btn-primary" type="button"
               ng-class="{'btn-success': prCrop['selected_by_user']['type'] == 'preset' &&
-              prCrop['selected_by_user']['class'] == url_class_name}"
-              ng-click="selectPresetUrl(url_class_name)">
-                <span title="{{ url_class_name }}" class="glyphicon {{ url_class_name }}"></span>
+              prCrop['selected_by_user']['preset_id'] == preset_id}"
+              ng-click="selectPresetUrl(preset_id)">
+                <span title="{{ url_class_name }}" class="glyphicon {{ preset_button_classes[preset_id] }}"></span>
         </span>
 
         <span ng-if="noneurl" class="btn btn-primary" type="button"
