--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -74,28 +74,28 @@
         <div class="col-lg-offset-2 col-md-offset-1 col-lg-6 col-md-7 col-sm-8 col-xs-12 menu-site">
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul>
-                    <li class="dropdown" ng-if="user"><a pr_test="ReadLine" href="{{ url_list_reader() }}"
+                    <li class="dropdown" ng-if="user"><a target="_blank" href="{{ url_list_reader() }}"
                                         title="{{ _('Стрічкa читача') }}"
                                         ng-class="{'selected': selected_user_menu == 'list_reader'}"><i
                             class="fa fa-newspaper-o"></i><span>{{ _('Стрічкa читача') }}</span></a></li>
-                    <li class="dropdown" ng-if="user"><a pr_test="UserMassages" href="{{ url_messenger }}"
+                    <li class="dropdown" ng-if="user"><a target="_blank" href="{{ url_messenger }}"
                                                     title="{{ _('Всі повідомлення') }}"
                                                     ng-class="{'selected': selected_user_menu == 'messages'}"><i
                             class="fa fa-envelope-o"></i><span>{{ _('Всі повідомлення') }}</span></a></li>
-                    <li class="dropdown"><a pr_test="CompaniesList" href="{{ url_company_companies() }}"
+                    <li class="dropdown"><a target="_blank" href="{{ url_company_companies() }}"
                                             title="{{ _('Компанії') }}"
                                             ng-class="{'selected': selected_user_menu == 'companies'}"><i
                             class="fa fa-building-o"></i><span>{{ _('Компанії') }}</span></a></li>
-                    <li class="dropdown"><a pr_test="FileManeger" href="{{ login_or_none_href() }}"
+                    <li class="dropdown"><a target="_blank" href="{{ login_or_none_href() }}"
                                             ng-click="open_filemanager()" title="{{ _('Менеджер файлів') }}"
                                             ng-class="{'selected': selected_user_menu == 'file_manager'}"><i
                             class="fa fa-folder-open-o"></i><span>{{ _('Менеджер файлів') }}</span></a></li>
-                    <li class="dropdown"><a pr_test="UserInfo" href="{{ url_general_help() }}"
+                    <li class="dropdown"><a target="_blank" href="{{ url_general_help() }}"
                                                 title="{{ _('Contact us') }}" target="_blank"
                                                 ng-class="{'selected': selected_user_menu == 'contact_us'}"><i
                             class="fa fa-question-circle"></i><span>{{ _('Contact us') }}</span></a></li>
 
-                    <li class="dropdown"><a pr_test="Tutorial" href="{{ url_tutorial() }}"
+                    <li class="dropdown"><a target="_blank" href="{{ url_tutorial() }}"
                                                 title="{{ _('tutorial') }}"
                                                 ng-class="{'selected': selected_user_menu == 'tutorial'}"><i
                             class="fa fa-file-video-o"></i><span>{{ _('Tutorial') }}</span></a></li>
