--- a/profapp/templates/front/wood1/layout_company_page.html
+++ b/profapp/templates/front/wood1/layout_company_page.html
@@ -3,6 +3,7 @@
     {{ _('title ' + company_menu_selected_item + ' %(company_name)s - %(portal_name)s', {'company_name': member_company.name, 'portal_name': portal.name}) }}
 {%- endblock %}
 {% block body %}
+    {% include 'tags_menu.html' %}
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-lg-10">
@@ -10,6 +11,17 @@
                     <main class="center-block" role="main">
                         {% include 'company_menu.html' %}
                     </main>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-lg-10">
+                <div class="clearfix">
+                    <main class="center-block" role="main">
+    {% block company_content %}{% endblock %}
+    </main>
                 </div>
             </div>
         </div>
